--- a/assets/css/strada_title.css
+++ b/assets/css/strada_title.css
@@ -1,35 +1,33 @@
-#stradaLogoContainer {
+.strada-title-wrap {
     left: 0;
     right: 0;
     top: 0;
-    display: table;
-    margin: 0 auto;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
 }
 
-#stradaLogoContainer p {
-    font-size: 1.75em;
+.strada-title-wrap p {
+    font-size: 2.25vh;
 }
 
-#stradaLogoContainer img {
-    height: 200px;
-    width: auto;
+.strada-title-wrap img {
+    width: 35vw;
 }
 
 .issue {
-    margin-top: 15px;
-    border-top: 1px solid #ccc;
-    padding-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 1vh;
+    padding-top: 1vh;
+
+    margin-bottom: 0.5vh;
+    padding-bottom: 3vh;
     border-bottom: 1px solid #ccc;
-    padding-bottom: 15px;
 }
 
 .issue p {
-    font-size: 1.5em;
+    font-size: 2.25vh;
 }
 
 .issue img {
-    height: 150px;
-    width: auto;
+    width: 55vw;
 }
 
